--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 quadtree = "0.4.0"
 rand = "0.9.2"
+rayon = "1.11.0"
 three-d = { git = "https://github.com/asny/three-d/" }
+wide = "0.7.33"
